// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode renders 1`] = `
<div
  className="Container-sc-1hcltrp-0 ifWpTg"
  dir="ltr"
/>
`;

exports[`AuthCode renders Custom length 1`] = `
<div
  className="Container-sc-1hcltrp-0 ifWpTg"
  dir="ltr"
>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
      disabled={false}
    >
      <input
        className="Input-qkdgvx-0 bDJHX"
        dir="ltr"
        disabled={false}
        id="auth-code-part-0"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 bDJHX"
        dir="ltr"
        disabled={true}
        id="auth-code-part-1"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 bDJHX"
        dir="ltr"
        disabled={true}
        id="auth-code-part-2"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 bDJHX"
        dir="ltr"
        disabled={true}
        id="auth-code-part-3"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Error state 1`] = `
<div
  className="Container-sc-1hcltrp-0 iVeayA"
  dir="ltr"
>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
      disabled={false}
    >
      <input
        className="Input-qkdgvx-0 kxUQuF"
        dir="ltr"
        disabled={false}
        id="auth-code-part-0"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 kxUQuF"
        dir="ltr"
        disabled={true}
        id="auth-code-part-1"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 kxUQuF"
        dir="ltr"
        disabled={true}
        id="auth-code-part-2"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 kxUQuF"
        dir="ltr"
        disabled={true}
        id="auth-code-part-3"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 kxUQuF"
        dir="ltr"
        disabled={true}
        id="auth-code-part-4"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="InputWrapper-msi09e-0 jIRmkQ"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <input
        className="Input-qkdgvx-0 kxUQuF"
        dir="ltr"
        disabled={true}
        id="auth-code-part-5"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="MessageWrapper-sc-4womv2-0 hpAIli"
  >
    <p
      className="Text-oby56-0 kjOxuQ"
      color="chiChi.100"
      size={12}
    >
      Provided value is not valid!
    </p>
  </div>
</div>
`;

exports[`AuthCode renders Only digits 1`] = `
<div
  className="Container-sc-1hcltrp-0 ifWpTg"
  dir="ltr"
/>
`;
